@@ -1,3 +1,10 @@
+2016-01-05  H.J. Lu  <hongjiu.lu@intel.com>
+
+	 [BZ #19122]
+	 * include/sys/mman.h [IS_IN (rtld)]: Include <dl-mman.h>.
+	 * sysdeps/generic/dl-mman.h: New file.
+	 * sysdeps/mach/hurd/dl-mman.h: Likewise.
+
 2016-01-05  Joseph Myers  <joseph@codesourcery.com>
 
 	* manual/texinfo.tex: Update to version 2016-01-04.21 with
